Update 06 - Object Burning
Changes:
- Tweaked particles on fire
- Items that touch fire will not be set on fire
- Items that have bearned for more than 3 seconds will instantly spread the flame
- After a certain period of time, you will be forced to drop a burning object
- Fire no longer transparent

--- a/ProjBTechTest.csproj
+++ b/ProjBTechTest.csproj
@@ -300,6 +300,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Fire\fireInsert.cs" />
+    <Compile Include="Assets\Scripts\Fire\fireSource.cs" />
     <Compile Include="Assets\Scripts\playerBehavior.cs" />
     <Compile Include="Assets\Scripts\pPickUp\extGrabbedBehave.cs" />
     <Compile Include="Assets\Scripts\pPickUp\extGrabbedBreak.cs" />
